# nss

./: .gitignore  README.md  pyproject.toml
experiments/: common.py  funnel.py  mog_10d.py  mog_40.py
src/nss/: ns.py  nuts.py  smc.py  ss.py  utils.py
